Allow multiple variants

--- a/index.html
+++ b/index.html
@@ -72,5 +72,9 @@
     <h2>Poll</h2>
     <wc-poll></wc-poll>
   </div>
+  <div style="width:50%;">
+    <h2>Poll</h2>
+    <wc-poll multiple></wc-poll>
+  </div>
 </body>
 </html>
