Add minified bundle

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <link href="./public/fonts.css" rel="stylesheet" />
 
-  <script src="./dist/dist.js"></script>
+  <script src="./dist/dist.min.js"></script>
 
   <script>
     window.onload = function onLoad(){
